--- a/style.css
+++ b/style.css
@@ -1,65 +1,156 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: black;
+  font-family: sans-serif;
+  background-color: black;
 }
 .main {
-    background-image: url('assets/images/netflix back image.jpg');
-    background-position: center center;
-    background-size: max(1200px, 100%);
-    background-repeat: no-repeat;
-    height: 80vh;
-    position: relative;
-
+  background-image: url("assets/images/netflix back image.jpg");
+  background-position: center center;
+  background-size: max(1200px, 100%);
+  background-repeat: no-repeat;
+  height: 95vh;
+  position: relative;
 }
 
 .main .box {
-    height: 80vh;
-    width: 100%;
-    opacity: 0.5;
-    background-color: black;
-    top: 0;
-    position: absolute;
+  height: 95vh;
+  width: 100%;
+  opacity: 0.69;
+  background-color: black;
+  top: 0;
+  position: absolute;
 }
 
 nav {
-    max-width: 76vw;
-    justify-content: space-between;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    height: 62px;
+  max-width: 77vw;
+  justify-content: space-between;
+  margin: auto;
+  margin-top: -8px;
+  display: flex;
+  align-items: center;
+  height: 62px;
+  position: relative;
+  padding: 0px 48px;
 }
-.logo img{
-    width: 145px;
-    position: absolute;
-    z-index: 100;
-}
-
-nav div button:nth-child(1) {
-    background-color: transparent;
-    font-size: 13px;
-    color: white;
-    border: 1px solid gray;
-    padding: 5px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    position: relative;
-    z-index: 100;
+.logo img {
+  width: 149px;
+  margin-left: -2px;
+  position: absolute;
+  z-index: 100;
+  display: block;
 }
 
-nav div button:nth-child(2) {
-    background-color: red;
-    color: white;
-    border: none;
-    padding: 4px 16px;
-    border-radius: 3px;
-    cursor: pointer;
-    position: relative;
-    z-index: 100;
-    font-size: 14px;
+
+nav button:nth-child(1) {
+  background-color: transparent;
+  font-size: 13px;
+  font-weight: 500;
+  color: white;
+  border: 1px solid rgb(255, 255, 255, 0.5);
+  padding: 7px 25px;
+  border-radius: 5px;
+  cursor: pointer;
+  position: relative;
+  z-index: 100;
+}
+
+nav button:nth-child(2) {
+  background-color: rgb(229, 9, 20);
+  color: white;
+  border: none;
+  padding: 7px 16px;
+  border-radius: 3px;
+  cursor: pointer;
+  position: relative;
+  z-index: 100;
+  font-size: 14px;
+  font-weight: 550;
+  margin: 50px 20px 0px 30px;
+}
+
+.big {
+  max-width: 76vw;
+  height: calc(100% - 77px);
+  margin: auto;
+  padding: 0px 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: white;
+  position: relative;
+}
+
+.big div:nth-child(1) {
+  font-size: 48px;
+  font-weight: 900;
+  margin-bottom: 20px;
+  margin-bottom: 30px;
+}
+
+.big div:nth-child(2) {
+    font-size: 24px;
     font-weight: 400;
+    margin-bottom: 28px;
+}
+
+.big div:nth-child(3) {
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.big div:nth-child(4) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.big div:nth-child(4) button {
+  background-color: rgb(229, 9, 20);
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  margin-left: 8px;
+  border-radius: 3px;
+  font-size: 24px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.big div:nth-child(4) button:hover {
+  background-color: #c9050f;
+  color: white;
+}
+
+.big div:nth-child(4) input {
+  background-color: rgb(23, 23, 23, 0.7);
+  opacity: 0.49;
+  color: white;
+  border: 1px solid rgb(255, 255, 255, 0.5);
+  border-radius: 3px;
+  font-weight: 500;
+  cursor: pointer;
+  font-size: 1rem;
+  padding-left: 16px;
+  padding-top: 24px;
+  padding-bottom: 8px;
+  padding-right: 166px;
+}
+
+.big div:nth-child(4) input:hover {
+  background-color: rgb(23, 23, 23, 0.7);
+  opacity: 0.69;
+  color: white;
+}
+
+.separator {
+    height: 8px;
+    background-color: rgb(56, 56, 56);
+    margin-top: 15px;
 }
